# scholarly-report

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html  journals.html
docs/authors/: 2bC6aPsAAAAJ.html  3ioz2B4AAAAJ.html  83LAYbIAAAAJ.html  GtLLuxoAAAAJ.html  KenJWYwAAAAJ.html  SRJug_AAAAAJ.html  UJoAfkIAAAAJ.html  UmlxKj4AAAAJ.html  atQ-4b8AAAAJ.html  bxXw-JUAAAAJ.html  eogyTQUAAAAJ.html  hDRCDJwAAAAJ.html  mim-jzwAAAAJ.html
docs/css/: style.css
docs/data/: journals.json  network.json
docs/js/: network.js
scholarlyreport/: __init__.py  get_author_data.py  produce_web_report.py
scripts/: sc-get-author-data  sc-produce-web-report
