[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarly-report"
version = "0.1.0"
description = "Tools to download and visualize Google Scholar data"
readme = "README.md"
authors = [
    {name = "A. Murat Eren", email = "meren@hifmbl.de"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.1.0",
    "webdriver-manager>=3.8.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "matplotlib>=3.5.0",
    "requests>=2.27.0",
    "pyyaml>=6.0.2"
]

[project.urls]
"Homepage" = "https://github.com/merenlab/scholarly-report/"
"Bug Tracker" = "https://github.com/merenlab/scholarly-report/issues"

[project.scripts]
sc-get-author-data = "scholarlyreport.get_author_data:main"
sc-produce-web-report = "scholarlyreport.produce_web_report:main"
